[package]
name = "reth-test"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0.1", features = ["alloc", "serde"] }
clap = { version = "4.6.0", features = ["derive"] }
hex = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.6"

stateless = { git = "https://github.com/paradigmxyz/stateless", rev = "e5480e71a8031641ff471cad9dc482a7a14b32d5" }

stateless-validator-common = { git = "https://github.com/eth-act/ere-guests", tag = "v0.10.0", features = ["host"] }
stateless-validator-reth = { git = "https://github.com/eth-act/ere-guests", tag = "v0.10.0", features = ["host"] }
