[package]
name = "reth"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(zisk_hints)', 'cfg(zisk_hints_debug)', 'cfg(target_vendor, values("zisk"))'] }

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
debug = false
codegen-units = 1

[dependencies]
anyhow = { version = "1.0", default-features = false }
bincode = { version = "2.0.1", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_with = { version = "3", default-features = false, features = ["macros"] }

alloy-consensus = { version = "2.0.0", default-features = false, features = ["crypto-backend"] }
alloy-eips = { version = "2.0.0", default-features = false }
alloy-genesis = { version = "2.0.0", default-features = false, features = ["serde-bincode-compat"] }
alloy-primitives = { version = "1.5.7", default-features = false, features = ["map-foldhash", "native-keccak", "portable-atomic"] }
alloy-rpc-types-engine = { version = "2.0.0", default-features = false, features = ["serde"] }

revm = { version = "38.0.0", default-features = false }

reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-primitives-traits = { version = "0.3.0", default-features = false }

stateless = { git = "https://github.com/portable-atomic-patches/stateless", rev = "80c9f273ab740bfe9e46ae393748aea00f0eb3ca", default-features = false }
tries = { git = "https://github.com/portable-atomic-patches/stateless", rev = "80c9f273ab740bfe9e46ae393748aea00f0eb3ca", default-features = false }

libssz = { version = "0.2.1", default-features = false, features = ["alloc"] }
libssz_derive = { package = "libssz-derive", version = "0.2.1" }
libssz_merkle = { package = "libssz-merkle", version = "0.2.1", default-features = false, features = ["alloc"] }
libssz_types = { package = "libssz-types", version = "0.2.1", default-features = false, features = ["alloc"] }

bytes = { version = "1", default-features = false, features = ["extra-platforms"] }
critical-section = { version = "1", default-features = false }
portable-atomic = { version = "1", default-features = false, features = ["critical-section"] }

zkvm-interface = { path = "../zkvm-interface" }

[patch.crates-io]
alloy-consensus         = { git = "https://github.com/portable-atomic-patches/alloy", tag = "v2.0.0" }
alloy-eips              = { git = "https://github.com/portable-atomic-patches/alloy", tag = "v2.0.0" }
alloy-genesis           = { git = "https://github.com/portable-atomic-patches/alloy", tag = "v2.0.0" }
alloy-primitives        = { git = "https://github.com/portable-atomic-patches/core", tag = "v1.5.7" }
alloy-primitives-macros = { git = "https://github.com/portable-atomic-patches/core", tag = "v1.5.7" }
alloy-rpc-types-debug   = { git = "https://github.com/portable-atomic-patches/alloy", tag = "v2.0.0" }
alloy-rpc-types-engine  = { git = "https://github.com/portable-atomic-patches/alloy", tag = "v2.0.0" }
alloy-serde             = { git = "https://github.com/portable-atomic-patches/alloy", tag = "v2.0.0" }

alloy-evm               = { git = "https://github.com/portable-atomic-patches/evm", tag = "v0.33.3" }
alloy-trie              = { git = "https://github.com/portable-atomic-patches/trie", tag = "v0.9.4" }
alloy-hardforks         = { git = "https://github.com/portable-atomic-patches/hardforks", tag = "alloy-hardforks-v0.4.7" }

revm-bytecode           = { git = "https://github.com/portable-atomic-patches/revm", tag = "v107" }
revm-context            = { git = "https://github.com/portable-atomic-patches/revm", tag = "v107" }
revm-context-interface  = { git = "https://github.com/portable-atomic-patches/revm", tag = "v107" }
revm-database           = { git = "https://github.com/portable-atomic-patches/revm", tag = "v107" }
revm-database-interface = { git = "https://github.com/portable-atomic-patches/revm", tag = "v107" }
revm-handler            = { git = "https://github.com/portable-atomic-patches/revm", tag = "v107" }
revm-inspector          = { git = "https://github.com/portable-atomic-patches/revm", tag = "v107" }
revm-interpreter        = { git = "https://github.com/portable-atomic-patches/revm", tag = "v107" }
revm-precompile         = { git = "https://github.com/portable-atomic-patches/revm", tag = "v107" }
revm-primitives         = { git = "https://github.com/portable-atomic-patches/revm", tag = "v107" }
revm-state              = { git = "https://github.com/portable-atomic-patches/revm", tag = "v107" }

[patch."https://github.com/paradigmxyz/reth"]
reth-chainspec           = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
reth-consensus           = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
reth-consensus-common    = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
reth-ethereum-consensus  = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
reth-ethereum-forks      = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
reth-ethereum-primitives = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
reth-evm                 = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
reth-evm-ethereum        = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
reth-execution-errors    = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
reth-execution-types     = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
reth-storage-api         = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
reth-storage-errors      = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
reth-trie-common         = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
reth-trie-sparse         = { git = "https://github.com/portable-atomic-patches/reth", tag = "v2.1.0" }
